--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "bin": {
+    "webify": "./index.ts"
+  },
+  "scripts": {
+    "webify": "bun run index.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
